Instalando o Mux e corrijindo os erros
