# docs/swagger.json
@@ -37,7 +37,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Cat"
+                                "$ref": "#/definitions/models.Categoria"
                             }
                         }
                     }
@@ -64,7 +64,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Cat"
+                            "$ref": "#/definitions/models.Categoria"
                         }
                     }
                 ],
@@ -72,7 +72,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Cat"
+                            "$ref": "#/definitions/models.Categoria"
                         }
                     },
                     "400": {
@@ -160,7 +160,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Cat"
+                            "$ref": "#/definitions/models.Categoria"
                         }
                     },
                     "400": {
@@ -198,7 +198,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Cat"
+                            "$ref": "#/definitions/models.Categoria"
                         }
                     }
                 ],
@@ -206,7 +206,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Cat"
+                            "$ref": "#/definitions/models.Categoria"
                         }
                     },
                     "400": {
@@ -476,7 +476,7 @@
         }
     },
     "definitions": {
-        "models.Cat": {
+        "models.Categoria": {
             "type": "object",
             "properties": {
                 "codigo": {
